Fix sprite alignment

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -27,13 +27,13 @@
   margin-top: 2px; }
 
 #sfb {
-  background-position: 0 -57px; }
+  background-position: 0 -59px; }
 
 #stwit {
   background-position: 50% 0; }
 
 #sgplus {
-  background-position: 0 -115px; }
+  background-position: 0 -117px; }
 
 #semail {
   background-position: 0 -175px; }
