--- a/docs/sass/_social-buttons.scss
+++ b/docs/sass/_social-buttons.scss
@@ -28,14 +28,14 @@
 
 }
 #sfb {
-    background-position:0 -57px ;
+    background-position:0 -59px ;
 }
 #stwit {
     background-position:50% 0 ;
 }
 
 #sgplus{
-    background-position:0 -115px ;
+    background-position:0 -117px ;
 }
 
 #semail{
